--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "jszip": "^3.10.1",
     "vue": "^3.5.18",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1"
