--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jszip": "^3.10.1",
     "vue": "^3.5.18",
     "vue-i18n": "^9.14.5",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
