--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "jszip": "^3.10.1",
     "vue": "^3.5.18",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1",
     "xlsx": "^0.18.5"
