--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "jsonpath-plus": "^10.3.0",
     "jszip": "^3.10.1",
     "vue": "^3.5.18",
     "vue-advanced-cropper": "^2.8.9",
