--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.7.0",
     "@tailwindcss/vite": "^4.1.12",
     "jsonpath-plus": "^10.3.0",
     "jszip": "^3.10.1",
