--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jszip": "^3.10.1",
     "vue": "^3.5.18",
     "vue-advanced-cropper": "^2.8.9",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1",
     "xlsx": "^0.18.5"
