--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-easy-lightbox": "^1.19.0",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1",
+    "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
