--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@imgly/background-removal": "^1.7.0",
     "@material-tailwind/html": "^3.0.0-beta.7",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/qrcode": "^1.5.5",
     "gif.js": "^0.2.0",
     "jsonpath-plus": "^10.3.0",
+    "jsqr": "^1.4.0",
     "jszip": "^3.10.1",
+    "qrcode": "^1.5.4",
     "vue": "^3.5.18",
     "vue-advanced-cropper": "^2.8.9",
     "vue-easy-lightbox": "^1.19.0",
