--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "electron:dev": "node electron/dev-runner.js",
-    "electron:build": "node electron/build.js"
+    "electron:build": "node electron/build.js",
+    "signaling-server": "node signaling-server.js",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@imgly/background-removal": "^1.7.0",
@@ -34,6 +36,7 @@
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1",
     "vuedraggable": "^4.1.0",
+    "ws": "^8.18.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -44,12 +47,14 @@
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "electron": "^31.7.7",
     "electron-builder": "^24.13.3",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
+    "jsdom": "^26.1.0",
     "less": "^4.4.1",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
@@ -57,6 +62,7 @@
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0",
+    "vitest": "^3.2.4",
     "vue-tsc": "^3.0.4"
   },
   "volta": {
