--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/qrcode": "^1.5.5",
     "gif.js": "^0.2.0",
+    "gifuct-js": "^2.1.2",
     "jsonpath-plus": "^10.3.0",
     "jsqr": "^1.4.0",
     "jszip": "^3.10.1",
@@ -49,6 +50,7 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "electron": "^31.7.7",
     "electron-builder": "^24.13.3",
     "eslint": "^9.31.0",
@@ -57,6 +59,7 @@
     "jsdom": "^26.1.0",
     "less": "^4.4.1",
     "npm-run-all2": "^8.0.4",
+    "postcss": "^8.5.6",
     "prettier": "3.6.2",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.0",
