--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-tailwind/html": "^3.0.0-beta.7",
     "@tailwindcss/vite": "^4.1.12",
     "@types/qrcode": "^1.5.5",
+    "fabric": "^6.7.1",
     "gif.js": "^0.2.0",
     "gifuct-js": "^2.1.2",
     "jsonpath-plus": "^10.3.0",
