--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jsonpath-plus": "^10.3.0",
     "jsqr": "^1.4.0",
     "jszip": "^3.10.1",
+    "pdfjs": "^2.5.4",
+    "pdfjs-dist": "^5.4.54",
     "qrcode": "^1.5.4",
     "vue": "^3.5.18",
     "vue-advanced-cropper": "^2.8.9",
