--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "@material-tailwind/html": "^3.0.0-beta.7",
     "@tailwindcss/vite": "^4.1.12",
     "@types/qrcode": "^1.5.5",
+    "@vueuse/core": "^13.8.0",
+    "@vueuse/motion": "^3.0.3",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.6",
     "fabric": "^6.7.1",
+    "framer-motion": "^12.23.12",
     "gif.js": "^0.2.0",
     "gifuct-js": "^2.1.2",
     "jsonpath-plus": "^10.3.0",
     "jsqr": "^1.4.0",
     "jszip": "^3.10.1",
+    "lucide-vue-next": "^0.542.0",
     "pdfjs-dist": "^5.4.54",
     "qrcode": "^1.5.4",
     "vue": "^3.5.18",
