--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "electron/main.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 5174",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
